    - Rewrited: New double linked list based walker for inserters. Now used dllist to handle inserters queue.
    - Added: The burner isnerters now try find fuel from pickup entity or try use helded suitable fuel when it's out of fuel.
    - Added: Ash chaining logic. Now inserter can take ash from burnt result inventories (self or pickup) and put to target's same inventory.
---------------------------------------------------------------------------------------------------
Version: 0.31.19
Date: 02.08.2025
  Bugfixes:
    - Fixed multiplayer error with command register action.
---------------------------------------------------------------------------------------------------
Version: 0.31.18
Date: 31.07.2025
  Features:
    - [apm.lib.utils.entity.set.hidden] Hide entity
---------------------------------------------------------------------------------------------------
Version: 0.31.17
Date: 31.07.2025
  Features:
    - [apm.lib.utils.entity.get.by_name] Find entity by name and group
    - [apm.lib.utils.entity.del.next_upgrade] Remove next_upgrade for selected entity
---------------------------------------------------------------------------------------------------
Version: 0.31.16
Date: 02.05.2025
  Features:
    - [apm.lib.utils.recipe.category.exists] Check recipe category
  Bugfixes:
    - [apm.lib.utils.assembler.add.crafting_categories] Can gracefully handle non-existing recipe category.
---------------------------------------------------------------------------------------------------
Version: 0.31.15
Date: 08.04.2025
  Bugfixes:
    - Some small refactoring.
---------------------------------------------------------------------------------------------------
Version: 0.31.14
Date: 07.04.2025
  Features:
    - [apm.lib.utils.planet.remove.resource] Remove resource from planet by name
    - [apm.lib.utils.planet.remove.everywhere_resource] Remove resource from all planets by name
    - [apm.lib.utils.resource.remove] Remove resource