@@ -1,5 +1,8 @@
-License for the source code:
+# -------------------------------------------------------------------
+# License for SOURCE CODE
+# -------------------------------------------------------------------
 # Copyright (C) 2019 Bjoern Trimborn (alias Amator Phasma)
+# Copyright (C) 2019-2025 Igor Drogunov (alias ldinc)
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -13,7 +16,11 @@ License for the source code:
 # You should have received a copy of the GNU General Public License
 # along with this program. If not, see <https://www.gnu.org/licenses/>.
 
-License for the images and sounds:
+# -------------------------------------------------------------------
+# License for ARTWORK (images, sounds, etc.)
+# -------------------------------------------------------------------
 # Copyright (C) 2019 Bjoern Trimborn (alias Amator Phasma)
-# CC BY 4.0
-# This work is licensed under the Creative Commons Attribution 4.0 International License. To view a copy of this license, visit http://creativecommons.org/licenses/by/4.0/.
+# Copyright (C) 2019-2025 Igor Drogunov (alias ldinc)
+#
+# This work is licensed under the Creative Commons Attribution 4.0 International License.
+# To view a copy of this license, visit http://creativecommons.org/licenses/by/4.0/.
